# DeadlineDriven_VLK

./: .dockerignore  .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
data/: achi.csv  tlk_10_am.csv
src/: app.py  build_database.py  prompts.py  rag_backend.py  test.py  test_encoding.py
